--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <title>The Movie Database (TMDB)</title>
   </head>
   <body>
+    <!-- header -->
     <header>
       <nav class="navbar navbar-expand-lg" style="background-color: #032541">
         <div class="container-fluid">
@@ -100,6 +101,8 @@
         </div>
       </nav>
     </header>
+    <!-- header -->
+    <!-- main -->
     <main>
       <div class="hero_section_1 container-fluid">
         <h1 class="text-light">Welecome.</h1>
@@ -117,6 +120,8 @@
         </div>
       </div>
     </main>
+    <!-- main -->
+    <!--section-->
     <section>
       <div class="hero_section_2 container-fluid">
         <h1 class="text-light" style="margin-left: 25px; font-size: 70px">
@@ -133,9 +138,22 @@
         </a>
       </div>
     </section>
+    <!--section-->
+    <!--movie treding-->
     <div class="movei_section">
-      
+      <div class="movei_treding_text d-flex">
+        <h2>Trending</h2>
+        <div class="movei_teriding_button_top">
+          <div class="Today">
+            <h5>Today</h5>
+          </div>
+          <div class="This_Week">
+            <h5>This Week</h5>
+          </div>
+        </div>
+        </div>
     </div>
+    <!--movie treding-->
     <script src="./app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
