--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
     <!--section-->
     <!--movie treding-->
     <div class="movei_section">
-      <div class="movei_treding_text d-flex" style="left: 0px; position: sticky;">
+      <div
+        class="movei_treding_text d-flex"
+        style="left: 0px; position: sticky"
+      >
         <h2>Trending</h2>
         <div class="movei_teriding_button_top">
           <div class="Today" onclick="today()">
@@ -152,13 +155,15 @@
           </div>
         </div>
       </div>
-      <div class="cards">
-      </div>
+      <div class="cards"></div>
     </div>
     <!--movie treding-->
     <!--Latest Trailers-->
     <div class="latest_trailers">
-      <div class="logo d-flex container-fluid" style="left: 0px; position:sticky;">
+      <div
+        class="logo d-flex container-fluid"
+        style="left: 0px; position: sticky"
+      >
         <h2 class="me-5">Latest Trailers</h2>
         <div class="on_tv_button d-flex">
           <div class="on_tv me-4" onclick="on_tv()">
@@ -172,12 +177,20 @@
       <div class="latest_movie">
         <div class="d-flex">
           <div class="movie_1 me-5">
-            <img src="./img/lastest_img/1.jpg" style="object-fit: cover; border-radius: 15px;" alt="">
+            <img
+              src="./img/lastest_img/1.jpg"
+              style="object-fit: cover; border-radius: 15px"
+              alt=""
+            />
             <h3 class="text-center">Bizning oxirgimiz</h3>
             <h5 class="text-center">pisode 5 Preview</h5>
           </div>
           <div class="movie_2">
-            <img src="./img/lastest_img/ymkFaEO0UdYXKIgcWZ23TlYIRD9.jpg" style="object-fit: cover; border-radius: 15px;" alt="">
+            <img
+              src="./img/lastest_img/ymkFaEO0UdYXKIgcWZ23TlYIRD9.jpg"
+              style="object-fit: cover; border-radius: 15px"
+              alt=""
+            />
             <h3 class="text-center pt-1">इमली</h3>
             <h5 class="text-center">Imlie | Bidaai Promo</h5>
           </div>
@@ -187,7 +200,10 @@
     <!--Latest Trailers-->
     <!--Popular-->
     <div class="popular_cards">
-      <div class="popular_text d-flex container-fluid" style="left: 0px; position: sticky;">
+      <div
+        class="popular_text d-flex container-fluid"
+        style="left: 0px; position: sticky"
+      >
         <h2 class="me-4">What's Popular</h2>
         <div class="popular_button_top d-flex">
           <div class="popular_on_tv" onclick="popular_on_tv()">
@@ -198,8 +214,7 @@
           </div>
         </div>
       </div>
-      <div class="popular_card">
-      </div>
+      <div class="popular_card"></div>
     </div>
     <!--Popular-->
     <!--Leaderboard-->
@@ -208,11 +223,27 @@
         <h3 class="me-5 mt-2">Leaderboard</h3>
         <div class="d-block">
           <div class="d-flex">
-            <div class="me-2 mt-2" style="width: 10px; height: 10px; border-radius: 50px; background-color: aqua;"></div>
+            <div
+              class="me-2 mt-2"
+              style="
+                width: 10px;
+                height: 10px;
+                border-radius: 50px;
+                background-color: aqua;
+              "
+            ></div>
             <p>All Time Edits</p>
           </div>
           <div class="d-flex">
-            <div class="me-2 mt-2" style="width: 10px; height: 10px; border-radius: 50px; background-color: pink;"></div>
+            <div
+              class="me-2 mt-2"
+              style="
+                width: 10px;
+                height: 10px;
+                border-radius: 50px;
+                background-color: pink;
+              "
+            ></div>
             <p>Edits This Week</p>
           </div>
         </div>
@@ -220,21 +251,311 @@
       <div class="prosent d-flex">
         <div class="prosent_1">
           <div class="d-flex">
-            <div class="text-center" style="width: 50px; height: 50px; border-radius:50px; background-color:red;">
-              <p class="mt-2 text-light">R</p> 
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #d40242;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">R</p>
+            </div>
+            <div>
+              <h4>rqphqel</h4>
+              <div class="d-flex">
+                <div class="green_prosent_1"></div>
+                <h6>124,782</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_1"></div>
+                <h6>22,076</h6>
+              </div>
             </div>
           </div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #d29001;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">R</p>
+            </div>
+            <div>
+              <h4>RuiZafon</h4>
+              <div class="d-flex">
+                <div class="green_prosent_2"></div>
+                <h6>287,936</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_2"></div>
+                <h6>16,500</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #01c6ac;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">Q</p>
+            </div>
+            <div>
+              <h4>qualitylover</h4>
+              <div class="d-flex">
+                <div class="green_prosent_3"></div>
+                <h6>318,237</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_3"></div>
+                <h6>6,152</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #d29001;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">P</p>
+            </div>
+            <div>
+              <h4>pinheirocl</h4>
+              <div class="d-flex">
+                <div class="green_prosent_4"></div>
+                <h6>19,478</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_4"></div>
+                <h6>5,669</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="width: 60px; height: 60px; padding: 5px"
+            >
+              <img
+                src="./img/leaderboard/5BvxGhRE7yjtbHCXgrTxPk9hBXp.jpg"
+                style="border-radius: 50px; width: 60px; height: 60px"
+                alt=""
+              />
+            </div>
+            <div>
+              <h4>Sheigutn</h4>
+              <div class="d-flex">
+                <div class="green_prosent_5"></div>
+                <h6>409,644</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_5"></div>
+                <h6>5,089</h6>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="prosent_2">
-  
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="width: 60px; height: 60px; padding: 5px"
+            >
+              <img
+                src="./img/leaderboard/3af6511cf44a709e6ae5b612903c846c.jpeg"
+                style="border-radius: 50px; width: 60px; height: 60px"
+                alt=""
+              />
+            </div>
+            <div>
+              <h4>heli5m</h4>
+              <div class="d-flex">
+                <div class="green_prosent_6"></div>
+                <h6>555,627</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_6"></div>
+                <h6>18,548</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #01c6ac;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">J</p>
+            </div>
+            <div>
+              <h4>jinbvcx</h4>
+              <div class="d-flex">
+                <div class="green_prosent_7"></div>
+                <h6>129,576</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_7"></div>
+                <h6>6,337</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #01b4e4;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">R</p>
+            </div>
+            <div>
+              <h4>RedGreenBY</h4>
+              <div class="d-flex">
+                <div class="green_prosent_8"></div>
+                <h6>8,392</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_8"></div>
+                <h6>6,063</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                padding: 5px;
+              "
+            >
+              <img src="./img/leaderboard/hjvyN4SrXqXy316GkbOshW8sGXJ.jpg" style="border-radius: 50px;" alt="">
+            </div>
+            <div>
+              <h4>talestalker</h4>
+              <div class="d-flex">
+                <div class="green_prosent_9"></div>
+                <h6>878,469</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_9"></div>
+                <h6>5,294</h6>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div
+              class="text-center me-3"
+              style="
+                width: 60px;
+                height: 60px;
+                border-radius: 50px;
+                background-color: #0177d2;
+                padding: 5px;
+              "
+            >
+              <p class="mt-3 text-light">S</p>
+            </div>
+            <div>
+              <h4>smile578</h4>
+              <div class="d-flex">
+                <div class="green_prosent_10"></div>
+                <h6>28,060</h6>
+              </div>
+              <div class="d-flex">
+                <div class="red_prosent_10"></div>
+                <h6>4,970</h6>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </div>
     <!--Leaderboard-->
+    <!--footer-->
+    <footer>
+      <div class="container">
+        <div class="footer_box d-flex">
+          <div style="margin-left: 140px;">
+            <img src="./img/blue_square_2-d537fb228cf3ded904ef09b136fe3fec72548ebc1fea3fbbd1ad9e36364db38b.svg" width="150px" alt="">
+            <div style="margin-left: 90px; margin-top:30px;">
+              <button class="footer_button btn"><h6> Hi Zohidjon Xasanov !</h6></button>
+            </div>
+          </div>
+          <div class="footer_link d-flex">
+            <div class="footer_link_1">
+              <h5>THE BASICS</h5>
+              <a href="#">About TMDB</a>
+              <br>
+              <a href="#">Contact Us</a>
+              <br>
+              <a href="#">Support Forums</a>
+              <br>
+              <a href="#">API</a>
+              <br>
+              <a href="#">System Status</a>
+            </div>
+            <div class="footer_link_2">
+              <h5>GET INVOLVED</h5>
+              <a href="#">Contribution Bible</a>
+              <br>
+              <a href="#">Add New Movie</a>
+              <br>
+              <a href="#">Add New TV Show</a>
+            </div>
+            <div class="footer_link_3">
+              <h5>COMMUNITY</h5>
+              <a href="#">Guidelines</a>
+              <br>
+              <a href="#">Discussions</a>
+              <br>
+              <a href="#">Leaderboard</a>
+              <br>
+              <a href="#">Twitter</a>
+            </div>
+            <div class="footer_link_4">
+              <h5>LEGAL</h5>
+              <a href="#">Terms of Use</a>
+              <br>
+              <a href="#">API Terms of Use</a>
+              <br>
+              <a href="#">Privacy Policy</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!--footer-->
     <script src="./app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
