--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
       >
         <h2>Trending</h2>
         <div class="movei_teriding_button_top">
-          <div class="Today" onclick="today()">
-            <a>Today</a>
+          <div class="Today" id="today" onclick="Today()">
+            <a id="today_a">Today</a>
           </div>
-          <div class="This_Week" onclick="week()">
-            <a>This Week</a>
+          <div class="This_Week" id="this_week" onclick="week()">
+            <a id="a_week">This Week</a>
           </div>
         </div>
       </div>
@@ -264,7 +264,9 @@
               <p class="mt-3 text-light">R</p>
             </div>
             <div>
-              <h4>rqphqel</h4>
+              <a href="#" class="text-dark">
+                <h4>rqphqel</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_1"></div>
                 <h6>124,782</h6>
@@ -289,7 +291,9 @@
               <p class="mt-3 text-light">R</p>
             </div>
             <div>
-              <h4>RuiZafon</h4>
+              <a href="#" class="text-dark">
+                <h4>RuiZafon</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_2"></div>
                 <h6>287,936</h6>
@@ -314,7 +318,9 @@
               <p class="mt-3 text-light">Q</p>
             </div>
             <div>
-              <h4>qualitylover</h4>
+              <a href="#" class="text-dark">
+                <h4>qualitylover</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_3"></div>
                 <h6>318,237</h6>
@@ -339,7 +345,9 @@
               <p class="mt-3 text-light">P</p>
             </div>
             <div>
-              <h4>pinheirocl</h4>
+              <a href="#" class="text-dark">
+                <h4>pinheirocl</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_4"></div>
                 <h6>19,478</h6>
@@ -362,7 +370,9 @@
               />
             </div>
             <div>
-              <h4>Sheigutn</h4>
+              <a href="#" class="text-dark">
+                <h4>Sheigutn</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_5"></div>
                 <h6>409,644</h6>
@@ -387,7 +397,9 @@
               />
             </div>
             <div>
-              <h4>heli5m</h4>
+              <a href="#" class="text-dark">
+                <h4>heli5m</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_6"></div>
                 <h6>555,627</h6>
@@ -412,7 +424,9 @@
               <p class="mt-3 text-light">J</p>
             </div>
             <div>
-              <h4>jinbvcx</h4>
+              <a href="#" class="text-dark">
+                <h4>jinbvcx</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_7"></div>
                 <h6>129,576</h6>
@@ -437,7 +451,9 @@
               <p class="mt-3 text-light">R</p>
             </div>
             <div>
-              <h4>RedGreenBY</h4>
+              <a href="#" class="text-dark">
+                <h4>RedGreenBY</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_8"></div>
                 <h6>8,392</h6>
@@ -461,7 +477,9 @@
               <img src="./img/leaderboard/hjvyN4SrXqXy316GkbOshW8sGXJ.jpg" style="border-radius: 50px;" alt="">
             </div>
             <div>
-              <h4>talestalker</h4>
+              <a href="#" class="text-dark">
+                <h4>talestalker</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_9"></div>
                 <h6>878,469</h6>
@@ -486,7 +504,9 @@
               <p class="mt-3 text-light">S</p>
             </div>
             <div>
-              <h4>smile578</h4>
+              <a href="#" class="text-dark">
+                <h4>smile578</h4>
+              </a>
               <div class="d-flex">
                 <div class="green_prosent_10"></div>
                 <h6>28,060</h6>
