--- a/index.html
+++ b/index.html
@@ -250,19 +250,21 @@
       </div>
       <div class="prosent d-flex">
         <div class="prosent_1">
-          <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #d40242;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">R</p>
-            </div>
+          <a href="#">
+            <div class="d-flex">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #d40242;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">R</p>
+              </div>
+          </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>rqphqel</h4>
@@ -278,18 +280,20 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #d29001;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">R</p>
-            </div>
+            <a href="#">              
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #d29001;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">R</p>
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>RuiZafon</h4>
@@ -305,18 +309,20 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #01c6ac;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">Q</p>
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #01c6ac;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">Q</p>
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>qualitylover</h4>
@@ -332,18 +338,20 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #d29001;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">P</p>
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #d29001;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">P</p>
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>pinheirocl</h4>
@@ -359,16 +367,18 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="width: 60px; height: 60px; padding: 5px"
-            >
-              <img
-                src="./img/leaderboard/5BvxGhRE7yjtbHCXgrTxPk9hBXp.jpg"
-                style="border-radius: 50px; width: 60px; height: 60px"
-                alt=""
-              />
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="width: 60px; height: 60px; padding: 5px"
+              >
+                <img
+                  src="./img/leaderboard/5BvxGhRE7yjtbHCXgrTxPk9hBXp.jpg"
+                  style="border-radius: 50px; width: 60px; height: 60px"
+                  alt=""
+                />
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>Sheigutn</h4>
@@ -386,16 +396,18 @@
         </div>
         <div class="prosent_2">
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="width: 60px; height: 60px; padding: 5px"
-            >
-              <img
-                src="./img/leaderboard/3af6511cf44a709e6ae5b612903c846c.jpeg"
-                style="border-radius: 50px; width: 60px; height: 60px"
-                alt=""
-              />
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="width: 60px; height: 60px; padding: 5px"
+              >
+                <img
+                  src="./img/leaderboard/3af6511cf44a709e6ae5b612903c846c.jpeg"
+                  style="border-radius: 50px; width: 60px; height: 60px"
+                  alt=""
+                />
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>heli5m</h4>
@@ -411,18 +423,20 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #01c6ac;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">J</p>
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #01c6ac;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">J</p>
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>jinbvcx</h4>
@@ -438,18 +452,20 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #01b4e4;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">R</p>
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #01b4e4;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">R</p>
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>RedGreenBY</h4>
@@ -465,17 +481,19 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                padding: 5px;
-              "
-            >
-              <img src="./img/leaderboard/hjvyN4SrXqXy316GkbOshW8sGXJ.jpg" style="border-radius: 50px;" alt="">
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  padding: 5px;
+                "
+              >
+                <img src="./img/leaderboard/hjvyN4SrXqXy316GkbOshW8sGXJ.jpg" style="border-radius: 50px;" alt="">
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>talestalker</h4>
@@ -491,18 +509,20 @@
             </div>
           </div>
           <div class="d-flex">
-            <div
-              class="text-center me-3"
-              style="
-                width: 60px;
-                height: 60px;
-                border-radius: 50px;
-                background-color: #0177d2;
-                padding: 5px;
-              "
-            >
-              <p class="mt-3 text-light">S</p>
-            </div>
+            <a href="#">
+              <div
+                class="text-center me-3"
+                style="
+                  width: 60px;
+                  height: 60px;
+                  border-radius: 50px;
+                  background-color: #0177d2;
+                  padding: 5px;
+                "
+              >
+                <p class="mt-3 text-light">S</p>
+              </div>
+            </a>
             <div>
               <a href="#" class="text-dark">
                 <h4>smile578</h4>
