--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <div class="dropdown">
                 <button class="dropbtn">Movies</button>
                 <div class="dropdown-content">
-                  <a href="#">Popular</a>
+                  <a href="./movie_index/movie.html">Popular</a>
                   <a href="#">Now Playing</a>
                   <a href="#">Upcoming</a>
                   <a href="#">Top Rated</a>
@@ -198,25 +198,6 @@
       </div>
     </div>
     <!--Latest Trailers-->
-    <!--Popular-->
-    <div class="popular_cards">
-      <div
-        class="popular_text d-flex container-fluid"
-        style="left: 0px; position: sticky"
-      >
-        <h2 class="me-4">What's Popular</h2>
-        <div class="popular_button_top d-flex">
-          <div class="popular_on_tv" onclick="popular_on_tv()">
-            <a>On TV</a>
-          </div>
-          <div class="popular_in" onclick="popular_In()">
-            <a>In Theaters</a>
-          </div>
-        </div>
-      </div>
-      <div class="popular_card"></div>
-    </div>
-    <!--Popular-->
     <!--Leaderboard-->
     <div class="Leaderboard">
       <div class="leaderboard_header container-fluid d-flex">
